# Stellar-soroban-contracts

stellar-insured-contracts/: Cargo.toml
stellar-insured-contracts/analytics_storage/: Cargo.toml
stellar-insured-contracts/analytics_storage/src/: main.rs
stellar-insured-contracts/contracts/: Cargo.toml  DID_INTEGRATION.md  PERFORMANCE_MONITORING.md  lib.rs
stellar-insured-contracts/contracts/alerting_system/: Cargo.toml
stellar-insured-contracts/contracts/analytics_storage/: Cargo.toml
stellar-insured-contracts/contracts/claims/: lib.rs  test.rs
stellar-insured-contracts/contracts/compliance_reporting/: Cargo.toml
stellar-insured-contracts/contracts/did/: Cargo.toml
stellar-insured-contracts/contracts/emergency_pause/: lib.rs
stellar-insured-contracts/contracts/error_handling/: Cargo.toml
stellar-insured-contracts/contracts/external_monitoring/: Cargo.toml
stellar-insured-contracts/contracts/gas_optimization/: Cargo.toml
stellar-insured-contracts/contracts/governance/: lib.rs
stellar-insured-contracts/contracts/governance_voting/: Cargo.toml
stellar-insured-contracts/contracts/identity_verification/: Cargo.toml
stellar-insured-contracts/contracts/insurance/: Cargo.toml
stellar-insured-contracts/contracts/insurance/src/: lib.rs  test.rs
stellar-insured-contracts/contracts/kyc_integration/: Cargo.toml
stellar-insured-contracts/contracts/monitoring_dashboard/: Cargo.toml
stellar-insured-contracts/contracts/monitoring_dashboard/src/: lib.rs
stellar-insured-contracts/contracts/oracle/: Cargo.toml
(+46 files in other folders)
