[package]
name = "analytics_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-native-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
