[workspace]
resolver = "2"
members = [
    "contracts/upgradeable",
    "contracts/governance",
    "contracts/version_registry",
]

[workspace.dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level        = "z"
overflow-checks  = true
debug            = false
strip            = "symbols"
debug-assertions = false
panic            = "abort"
codegen-units    = 1
lto              = true